# unicorn

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS.TXT  Brewfile  CMakeLists.txt  COMPILE.TXT  CREDITS.TXT  Cargo.toml  ChangeLog  Dockerfile  LEAK_VALGRIND  Makefile  README  README.md  SECURITY.md  SPONSORS.TXT  TODO  TODO-s390  appveyor.yml  build.rs  build.sh  build.zig  build.zig.zon  bundle_static.cmake  cmake.sh  config.mk  format.sh  go.mod  hook.c  install-cmocka-linux.sh  interval.c  list.c  make.sh  mingw-w64.cmake  msvc.bat  nmake.bat  pkgconfig.mk  (+5 more)
.github/: stale.yml
bindings/: Makefile  README  const_generator.py
bindings/java/: .gitignore  CMakeLists.txt  Makefile  Makefile.build  README.TXT  README.md  eclipse-formatter.xml  pom.xml  unicorn_Unicorn.c
bindings/java/samples/: SampleNetworkAuditing.java  Sample_arm.java  Sample_arm64.java  Sample_m68k.java  Sample_mips.java  Sample_powerpc.java  Sample_sparc.java  Sample_x86.java  Sample_x86_mmr.java  Shellcode.java
bindings/java/src/main/java/unicorn/: AVRConst.java  Arm64Const.java  Arm64SysHook.java  ArmConst.java  CodeHook.java  CpuidHook.java  EdgeGeneratedHook.java  Hook.java  InterruptHook.java  InvalidInstructionHook.java  M68kConst.java  MemHook.java  MipsConst.java  MmioReadHandler.java  PpcConst.java  Rh850Const.java  RiscvConst.java  S390xConst.java  SparcConst.java  SyscallHook.java  TlbFillHook.java  TranslationBlock.java  TriCoreConst.java  Unicorn.java  UnicornConst.java  X86Const.java  X86_Float80.java  X86_MMR.java  X86_MSR.java
bindings/java/src/test/java/samples/: Sample_arm.java  Sample_arm64.java  Sample_ctl.java  Sample_m68k.java  Sample_mmu.java  Sample_ppc.java  Sample_riscv.java  Sample_s390x.java  Sample_sparc.java  Sample_tricore.java  Sample_x86.java  Shellcode.java  Utils.java
bindings/java/src/test/java/tests/: FunctionalityTests.java  HookTests.java  MemTests.java  RegressionTests.java
bindings/java/tests/: FunctionalityTests.java  HookTests.java  MemTests.java  RegTests.java  RegressionTests.java  TestSamples.java
bindings/java/unicorn/: Arm64Const.java  Arm64Regs.java  Arm64_CP.java  ArmConst.java  ArmRegs.java  Arm_CP.java  BlockHook.java  CodeHook.java  EdgeGeneratedHook.java  EventMemHook.java  Hook.java  InHook.java  InstructionHook.java  InterruptHook.java  InvalidInstructionHook.java  M68kConst.java  M68kRegs.java  MemHook.java  MemRegion.java  MemoryInvalidHook.java  MipsConst.java  MipsRegs.java  MmioWriteHandler.java  OutHook.java  PPCConst.java  PpcConst.java  ReadHook.java  ReadWriteHook.java  RiscvConst.java  S390xConst.java  SparcConst.java  SparcRegs.java  SyscallHook.java  TcgOpcodeHook.java  TranslationBlock.java  TriCoreConst.java  Unicorn.java  UnicornArchs.java  UnicornConst.java  UnicornErrors.java  (+10 more)
bindings/python/: .gdb_history  MANIFEST.in  Makefile  README.TXT  README.md  build_wheel.sh  build_wheel_aarch64.sh  musl_wheel.sh  pyproject.toml  sample_all.sh  sample_arm.py  sample_arm64.py  sample_arm64eb.py  sample_armeb.py  sample_ctl.py  sample_m68k.py  sample_mips.py  sample_network_auditing.py  sample_ppc.py  sample_rh850.py  sample_riscv.py  sample_s390x.py  sample_sparc.py  sample_tricore.py  sample_x86.py  setup.py  shellcode.py  unittest_ppc.py
bindings/python/bindings-test/share/python-wheels/: CacheControl-0.12.6-py2.py3-none-any.whl  appdirs-1.4.4-py2.py3-none-any.whl  certifi-2020.6.20-py2.py3-none-any.whl  chardet-4.0.0-py2.py3-none-any.whl  colorama-0.4.4-py2.py3-none-any.whl  contextlib2-0.6.0.post1-py2.py3-none-any.whl  distlib-0.3.1-py2.py3-none-any.whl  distro-1.5.0-py2.py3-none-any.whl  html5lib-1.1-py2.py3-none-any.whl  idna-2.10-py2.py3-none-any.whl  ipaddr-2.2.0-py2.py3-none-any.whl  msgpack-1.0.0-py2.py3-none-any.whl  packaging-20.9-py2.py3-none-any.whl  pep517-0.9.1-py2.py3-none-any.whl  pip-20.3.4-py2.py3-none-any.whl  pkg_resources-0.0.0-py2.py3-none-any.whl  progress-1.5-py2.py3-none-any.whl  pyparsing-2.4.7-py2.py3-none-any.whl  requests-2.25.1-py2.py3-none-any.whl  resolvelib-0.5.4-py2.py3-none-any.whl  retrying-1.3.3-py2.py3-none-any.whl  setuptools-44.1.1-py2.py3-none-any.whl  six-1.16.0-py2.py3-none-any.whl  toml-0.10.1-py2.py3-none-any.whl  urllib3-1.26.5-py2.py3-none-any.whl  webencodings-0.5.1-py2.py3-none-any.whl  wheel-0.34.2-py2.py3-none-any.whl
bindings/python/tests/: test_arm.py  test_arm64.py  test_arm64eb.py  test_armeb.py  test_ctl.py  test_m68k.py  test_mips.py  test_network_auditing.py  test_ppc.py  test_riscv.py  test_s390x.py  test_shellcode.py  test_sparc.py  test_tricore.py  test_x86.py
bindings/python/unicorn/: __init__.py  arm64_const.py  arm_const.py  avr_const.py  m68k_const.py  mips_const.py  ppc_const.py  rh850_const.py  riscv_const.py  s390x_const.py  sparc_const.py  tricore_const.py  unicorn.py  unicorn_const.py  unicorn_py2.py  x86_const.py
bindings/python/unicorn/arch/: arm.py  arm64.py  generic.py  intel.py  types.py
bindings/python/unicorn/unicorn_py3/: __init__.py  unicorn.py
bindings/python/unicorn/unicorn_py3/arch/: __init__.py  arm.py  arm64.py  intel.py  types.py
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/src/: arm.rs  arm64.rs  avr.rs  ffi.rs  hook.rs  lib.rs  m68k.rs  mips.rs  ppc.rs  rh850.rs  riscv.rs  s390x.rs  sparc.rs  tricore.rs  unicorn_const.rs  utils.rs  x86.rs
bindings/rust/src/tests/: arm.rs  arm64.rs  ctl.rs  m68k.rs  mem.rs  mips.rs  mod.rs  ppc.rs
bindings/rust/sys/: Cargo.toml  README.md  build.rs
bindings/rust/sys/src/: bindings.rs  lib.rs
bindings/rust/tests/: unicorn.rs
bindings/rust/unicorn-engine/: Cargo.toml
bindings/rust/unicorn-engine/src/: hook.rs  unicorn_const.rs
bindings/rust/unicorn-engine/src/tests/: mips.rs  ppc.rs  riscv.rs  s390x.rs
cmake/: bundle_static.cmake  zig.cmake
debian/: changelog  clean  control  copyright  libunicorn-dev.install  rules  watch
docs/: COMPILE-CMAKE.md  COMPILE-NIX.md  COMPILE-WINDOWS.md  COMPILE.md  COMPILE_CMAKE.TXT  FAQ.md  Hooks.md  Micro Unicorn-Engine API Documentation.md  OPENBSD-NOTES.md  README  README.md  Testing.md  unicorn-logo.txt
(+1772 files in other folders)
